// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`streamAccessPoint get 1`] = `
{
  "headers": {
    "accept": "*/*",
    "accept-encoding": "gzip,deflate",
    "connection": "close",
    "host": "transfer.api.globus.org",
    "user-agent": "node-fetch/1.0 (+https://github.com/bitinn/node-fetch)",
  },
  "method": "GET",
  "url": "https://transfer.api.globus.org/v2/stream_access_points/example-stream-access-point-id",
}
`;

exports[`streamAccessPoint getAll 1`] = `
{
  "headers": {
    "accept": "*/*",
    "accept-encoding": "gzip,deflate",
    "connection": "close",
    "host": "transfer.api.globus.org",
    "user-agent": "node-fetch/1.0 (+https://github.com/bitinn/node-fetch)",
  },
  "method": "GET",
  "url": "https://transfer.api.globus.org/v2/stream_access_points?filter%5Bendpoint_admin%5D=true&filter%5Bfulltext%5D=example",
}
`;
